--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -7,3 +7,11 @@
 .cta-group {
   justify-content: center;
 }
+
+.markdown a {
+  text-decoration: none;
+}
+
+.hero a {
+  text-decoration: none;
+}
